[gd_scene load_steps=7 format=3 uid="uid://etbg3ubw0iid"]

[ext_resource type="Script" path="res://monster/main_body.gd" id="1_fklqw"]
[ext_resource type="PackedScene" uid="uid://0ioxdni2wffp" path="res://monster/body_part.tscn" id="2_6msg4"]
[ext_resource type="Texture2D" uid="uid://2ew2ny1bn1h" path="res://assets/EyeGgog.png" id="3_gb0mp"]
[ext_resource type="PackedScene" uid="uid://cw8u6tgb1lkit" path="res://monster/rope.tscn" id="4_6yag5"]
[ext_resource type="AudioStream" uid="uid://b6jrih1r4drb1" path="res://sounds/hit_tentacle.mp3" id="5_4sk8d"]
[ext_resource type="AudioStream" uid="uid://dgcluxjquv2t7" path="res://sounds/tentacle_squish.mp3" id="6_cnrsq"]

[node name="main_body" type="Node2D"]
script = ExtResource("1_fklqw")
great_tentacle_length = 200.0

[node name="bodies" type="Node2D" parent="."]

[node name="body_part" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part2" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part3" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part4" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part5" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part6" parent="bodies" instance=ExtResource("2_6msg4")]
linear_velocity = Vector2(10, 0)

[node name="body_part7" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part8" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part9" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="body_part10" parent="bodies" instance=ExtResource("2_6msg4")]

[node name="EyeGgog" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("3_gb0mp")

[node name="cam_follow" type="Marker2D" parent="."]

[node name="rope" parent="." instance=ExtResource("4_6yag5")]

[node name="tentacle_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4sk8d")
volume_db = -5.0
max_distance = 20000.0
attenuation = 0.00390625
bus = &"sfx"

[node name="incubate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_cnrsq")
volume_db = 5.0
max_distance = 200000.0
attenuation = 0.00571909
bus = &"sfx"
